--- a/functions/.gitignore
+++ b/functions/.gitignore
@@ -1,12 +1,57 @@
-# Compiled JavaScript files
-lib/**/*.js
-lib/**/*.js.map
-
-# TypeScript v1 declaration files
-typings/
-
-# Node.js dependency directory
+# =========================================
+# Node.js
+# =========================================
 node_modules/
-*.local
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+package-lock.json
+pnpm-lock.yaml
+yarn.lock
 
+# =========================================
+# Build output
+# =========================================
+dist/
+build/
+*.log
+
+# =========================================
+# Firebase
+# =========================================
 .firebase/
+.firebase-cache/
+.firebaserc
+
+# =========================================
+# Environment variables
+# =========================================
+.env
+.env.*.local
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# =========================================
+# IDEs & Editors
+# =========================================
+.vscode/
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# =========================================
+# Husky
+# =========================================
+.husky/_/
+
+# =========================================
+# Misc
+# =========================================
+.DS_Store
+Thumbs.db
