--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase": "^12.1.0",
     "firebase-admin": "^13.4.0",
     "firebase-functions": "^6.4.0",
+    "lucide-react": "^0.540.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.1",
